Clase6:Iteraciones,Pt1;@if

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <body>
     <h1>Funciones en Sass</h1>
     <div class="long-shadow">
-        <p>Hola mundo</p>
+        <p class="column-3">Hola mundo</p>
     </div>
     
     <div class="long-shadow2">
